--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
                 <li>
                     <h2>
-                    <a target="_blank" href="cementeri_girona.html">Mapbox_Cementerio_Girona</a>
+                    <a target="_blank" href="cementeri_girona_mamou.html">Mapbox_Cementerio_Girona</a>
                     </h2>
                 </li>
                 
