--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                     <a target="_blank" href="cementeri_girona_mamou.html">Mapbox_Cementerio_Girona</a>
                     </h2>
                 </li>
+                <li>
+                    <h2>
+                    <a target="_blank" href="proxecto_galicia.html">Mapbox_Camiño_Sens/orial</a>
+                    </h2>
+                </li>
                 
             </ul>
 
